--- a/master/client/src/pages/JobSubmit.css
+++ b/master/client/src/pages/JobSubmit.css
@@ -28,6 +28,15 @@
     margin-top: 5vmin;
 }
 
+.JobSubmit-Dropzone {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .JobSubmit-Actions {
     display: flex;
     flex-direction: row;
