--- a/master/client/src/pages/JobBoard.css
+++ b/master/client/src/pages/JobBoard.css
@@ -63,7 +63,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
     border-radius: 1vmin;
     padding: 2vmin;
@@ -83,6 +83,18 @@
     margin-top: 1vmin;
     max-width: 20vmin;
     margin-bottom: 1vmin;
+}
+
+.JobBoard-JobResultWidget-Left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.JobBoard-JobResultWidget-Right {
+    width: 100%;
+    height: 100%;
 }
 
 @keyframes spin {
